# DewerARRename

./: .replit  JPG_Barcode_Renamer.spec  JPG_Barcode_Renamer_Desktop.spec  README.md  README_EXE.md  app.py  barcode_processor.py  build_exe.py  create_exe.bat  create_exe.sh  create_portable_app.py  create_sample_images.py  desktop_app.py  launcher.py  pyinstaller_spec.py  pyproject.toml  replit.md  requirements_github.txt
.github/workflows/: build-exe.yml  main.yml
src/: main.py
